the google colab url updated.

--- a/.google_colab/TimeVQVAE (generation only).ipynb
+++ b/.google_colab/TimeVQVAE (generation only).ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "[![Google Colab](https://colab.research.google.com/github/ML4ITS/TimeVQVAE/blob/main/.google_colab/TimeVQVAE%20(generation%20only).ipynb)"
+    "[![Google Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ML4ITS/TimeVQVAE/blob/main/.google_colab/TimeVQVAE%20(generation%20only).ipynb)"
    ],
    "metadata": {
     "id": "YaSr5bRcXWCA"
