data_scaling code updated; the sampling notebooks offer examples of generating new time series in the original scale (enabled by `unscale=True`)

--- a/simple_sampling.ipynb
+++ b/simple_sampling.ipynb
@@ -112,7 +112,7 @@
     "# unconditional sampling\n",
     "# xhat_R == xhat if `use_fidelity_enhancer` is False\n",
     "# xhat_R == FE(xhat) if `use_fidelity_enhancer` is True\n",
-    "(_, _, xhat), xhat_R = evaluation.sample(n_samples, 'unconditional')\n",
+    "(_, _, xhat), xhat_R = evaluation.sample(n_samples, 'unconditional', unscale=True)\n",
     "\n",
     "ylim = (-4, 4)\n",
     "plt.figure(figsize=(7,3))\n",
@@ -159,7 +159,7 @@
     "# xhat_R == xhat if `use_fidelity_enhancer` is False\n",
     "# xhat_R == FE(xhat) if `use_fidelity_enhancer` is True\n",
     "class_index = 0\n",
-    "(_, _, xhat), xhat_R = evaluation.sample(n_samples, 'conditional', class_index)\n",
+    "(_, _, xhat), xhat_R = evaluation.sample(n_samples, 'conditional', class_index, unscale=True)\n",
     "\n",
     "plt.figure(figsize=(7,3))\n",
     "plt.plot(xhat[:,0,:].T, color='C0', alpha=0.2)\n",
