renamed fid_enhancer with neural_mapper

--- a/custom_dataset_sampling.ipynb
+++ b/custom_dataset_sampling.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "n_samples = 100  # number of synthetic time series to sample\n",
     "gpu_device_idx = 0\n",
-    "use_fidelity_enhancer = False"
+    "use_neural_mapper = False"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "                        n_classes, \n",
     "                        gpu_device_idx, \n",
     "                        config, \n",
-    "                        use_fidelity_enhancer=use_fidelity_enhancer,\n",
+    "                        use_neural_mapper=use_neural_mapper,\n",
     "                        use_custom_dataset=True,\n",
     "                        ).to(gpu_device_idx)"
    ]
@@ -107,8 +107,8 @@
    ],
    "source": [
     "# unconditional sampling\n",
-    "# xhat_R == xhat if `use_fidelity_enhancer` is False\n",
-    "# xhat_R == FE(xhat) if `use_fidelity_enhancer` is True\n",
+    "# xhat_R == xhat if `use_neural_mapper` is False\n",
+    "# xhat_R == NM(xhat) if `use_neural_mapper` is True\n",
     "(_, _, xhat), xhat_R = evaluation.sample(n_samples, 'unconditional', unscale=True)\n",
     "\n",
     "b, c, l = xhat.shape\n",
@@ -124,7 +124,7 @@
     "    plt.ylim(*ylim)\n",
     "    plt.show()\n",
     "\n",
-    "    if use_fidelity_enhancer:\n",
+    "    if use_neural_mapper:\n",
     "        plt.figure(figsize=(7,3))\n",
     "        plt.plot(xhat_R[:,channel_idx,:].T, color='C0', alpha=0.2)\n",
     "        plt.title(r'$\\hat{X}_R$' + f' (channel idx:{channel_idx})')\n",
@@ -201,8 +201,8 @@
    ],
    "source": [
     "# class-conditional sampling\n",
-    "# xhat_R == xhat if `use_fidelity_enhancer` is False\n",
-    "# xhat_R == FE(xhat) if `use_fidelity_enhancer` is True\n",
+    "# xhat_R == xhat if `use_neural_mapper` is False\n",
+    "# xhat_R == NM(xhat) if `use_neural_mapper` is True\n",
     "class_index = 0\n",
     "(_, _, xhat), xhat_R = evaluation.sample(n_samples, 'conditional', class_index, unscale=True)\n",
     "\n",
@@ -218,7 +218,7 @@
     "    plt.ylim(*ylim)\n",
     "    plt.show()\n",
     "\n",
-    "    if use_fidelity_enhancer:\n",
+    "    if use_neural_mapper:\n",
     "        plt.figure(figsize=(7,3))\n",
     "        plt.plot(xhat_R[:,channel_idx,:].T, color='C0', alpha=0.2)\n",
     "        plt.title(r'$\\hat{X}_R$' + ' ' + f'(class idx:{class_index} | channel idx:{channel_idx})')\n",
